--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "heroku-postbuild": "cd client && npm install && npm run build"
+  },
+  "engines": {
+    "npm": "6.14.4",
+    "node": "13.14.0"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
